--- a/splash.yaml
+++ b/splash.yaml
@@ -1,13 +1,13 @@
 flutter_native_splash: 
   color: "#FFFFFF"
   color_dark: "#272727"
-  image: assets\logos\splash-logo-black.png
-  image_dark: assets\logos\splash-logo-white.png
+  image: assets/logos/splash-logo-black.png
+  image_dark: assets/logos/splash-logo-white.png
 
   android_12:
     color: "#FFFFFF"
     color_dark: "#272727"
-    image: assets\logos\splash-logo-black.png
-    image_dark: assets\logos\splash-logo-white.png
+    image: assets/logos/splash-logo-black.png
+    image_dark: assets/logos/splash-logo-white.png
 
   web: false 
